     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
   * MGE HID list of `mge_model_names[]` was extended for Eaton 5PX and 5SC
     series (largely guessing, feedback and PRs for adaptation to actual
     string values reported by devices via USB are welcome), so these devices
     would now report `battery.voltage` and `battery.voltage.nominal`. [#2380]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

 - USB drivers could log `(nut_)libusb_get_string: Success` due to either
   reading an empty string or getting a success code `0` from libusb.
   This difference should now be better logged, and not into syslog. [#2399]

 - Introduced a new driver concept for interaction with OS-reported hardware
   monitoring readings. Currently instantiated as `hwmon_ina219` specifically
   made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
   subsystem of its "sysfs" interface (and talking I2C under the hood), this
   approach seems to have good potential to expand into covering more devices
   and perhaps platforms. [#2430]

 - upsmon:
   * it was realized that the `POWERDOWNFLAG` must be explicitly set in the
     configuration file, there is no built-in default in the binary program
     (the settings facilitated by the `configure` script during build "only"
     impact the `upsmon.conf.sample`, init-scripts and similar files generated
     from templates). [issue #321, PR #2383]
   * added an `OBLBDURATION` (seconds) setting to optionally delay raising
     the alarm for immediate shutdown in critical situation. [#321]

 - gamatronic driver revised for safer memory operations; this was reported
   to have fixed a Segmentation Fault seen in earlier NUT releases with
   some of the devices supported by this driver. [#2427]

 - upsd: