@@ -174,6 +174,15 @@ It is also always possible that NUT fix-ups cause issues on some devices,
 whether due to NUT bugs or because the vendor protocol implementation is
 broken in more than one place.
 
+*powercom_sdcmd_byte_order_fallback*::
+Original `PowerCOM HID` subdriver code (until version 0.7) sent UPS `shutdown`
+and `stayoff` commands in a wrong byte order, than what is needed by actual
+devices seen in the field in 2024.  The byte order is fixed to satisfy new
+devices by default since version 0.71.  Just in case there are different
+firmwares out there with opposite behaviors, we provide this toggle to use
+old behavior in a particular deployment.  Maybe it was just a bug and nobody
+needs this fall-back...
+
 *explore*::
 With this option, the driver will connect to any device, including
 ones that are not yet supported. This must always be combined with the
